Fixed identical css and StellarRabbit menu on mobile reso

--- a/src/designs/css/styles.css
+++ b/src/designs/css/styles.css
@@ -2,3 +2,13 @@
   padding: 0;
   margin: 0;
 }
+
+section {
+  width: 100%;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.freeze {
+  overflow: hidden;
+}
